--- a/discord.html
+++ b/discord.html
@@ -16,7 +16,7 @@
         sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
 
 <p>
-    My <img src="" alt=""> Discord is <code>allyce.</code>
+    My <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/37/Bootstrap_discord.svg/640px-Bootstrap_discord.svg.png" alt=""> Discord is <code>allyce.</code>
 </p>
 <a href="index.html">
     <button>
