--- a/games.html
+++ b/games.html
@@ -16,7 +16,7 @@
     The rest can be found on one of the following<br>
 <a href="https://steamcommunity.com/id/Allyce3642/games">
     <button>
-        <img src="" alt=""> Steam
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/83/Steam_icon_logo.svg/640px-Steam_icon_logo.svg.png" alt=""> Steam
     </button>
 </a>
 <a href="https://store.epicgames.com/u/267b6462f9da464491001d1869f56a7d">
