--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 </a>
 <a href="discord.html">
     <button>
-        <img src="" alt=""> Discord
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/37/Bootstrap_discord.svg/640px-Bootstrap_discord.svg.png" alt=""> Discord
     </button>
 </a>
 </body>
