--- a/links.html
+++ b/links.html
@@ -49,46 +49,46 @@
     </button>
 </a><a href="https://steamcommunity.com/id/Allyce3642/">
     <button>
-        <img src="" alt=""> Steam
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/83/Steam_icon_logo.svg/640px-Steam_icon_logo.svg.png" alt=""> Steam
     </button>
 </a><a href="https://www.threads.net/@ally_to_all">
     <button>
-        <img src="" alt=""> Threads
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9d/Threads_%28app%29_logo.svg/640px-Threads_%28app%29_logo.svg.png" alt=""> Threads
     </button>
 </a><a href="https://tiktok.com/@allyce3642">
     <button>
-        <img src="" alt=""> TikTok
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/34/Ionicons_logo-tiktok.svg/640px-Ionicons_logo-tiktok.svg.png" alt=""> TikTok
     </button>
 </a><a href="https://allyce3642.tumblr.com/">
     <button>
-        <img src="" alt=""> Tumblr
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f6/Font_Awesome_5_brands_tumblr-square.svg/640px-Font_Awesome_5_brands_tumblr-square.svg.png" alt=""> Tumblr
     </button>
 </a><a href="https://twitch.tv/allyce3642/">
     <button>
-        <img src="" alt=""> Twitch
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d3/Twitch_Glitch_Logo_Purple.svg/640px-Twitch_Glitch_Logo_Purple.svg.png" alt=""> Twitch
     </button>
 </a><a href="https://x.com/allytoall1">
     <button>
-        <img src="" alt=""> Twitter
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6f/Logo_of_Twitter.svg/640px-Logo_of_Twitter.svg.png" alt=""> Twitter
     </button>
 </a><a href="https://www.xbox.com/en-GB/play/user/Allyce1017">
     <button>
-        <img src="" alt=""> Xbox
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f9/Xbox_one_logo.svg/640px-Xbox_one_logo.svg.png" alt=""> Xbox
     </button>
 </a><a href="https://www.youtube.com/@allyce7141">
     <button>
-        <img src="" alt=""> YouTube
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fd/YouTube_full-color_icon_%282024%29.svg/640px-YouTube_full-color_icon_%282024%29.svg.png" alt=""> YouTube
     </button>
 </a><a href="https://ubisoftconnect.com/en-GB/profile/Ally_To_All/">
     <button>
-        <img alt="" src=""> Ubisoft
+        <img src="https://upload.wikimedia.org/wikipedia/commons/7/78/Ubisoft_logo.svg" alt=""> Ubisoft
     </button>
 </a><br>
-<img src="" alt=""> Riot Games - <code>Allyce#ENBY</code><br>
-<img src="" alt=""> Activision / Call of Duty - <code>Allyce#1744697</code><br>
-<img src="" alt=""> Nebula Starbreeze / Payday - <code>Allyce</code><br>
-<img src="" alt=""> Signal - <code>allyce.01</code><br>
-<img src="" alt=""> Battle.net - <code>Ally#22564</code><br>
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fc/Valorant_logo_-_pink_color_version_%28cropped%29.png/640px-Valorant_logo_-_pink_color_version_%28cropped%29.png" alt=""> Riot Games - <code>Allyce#ENBY</code><br>
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/01/Activision.svg/640px-Activision.svg.png" alt=""> Activision / Call of Duty - <code>Allyce#1744697</code><br>
+<img src="https://upload.wikimedia.org/wikipedia/en/thumb/d/db/Starbreeze_Studios.svg/220px-Starbreeze_Studios.svg.png" alt=""> Nebula Starbreeze / Payday - <code>Allyce</code><br>
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8d/Signal-Logo.svg/640px-Signal-Logo.svg.png" alt=""> Signal - <code>allyce.01</code><br>
+<img src="https://upload.wikimedia.org/wikipedia/en/a/a8/Battlenet-logo.png" alt=""> Battle.net - <code>Ally#22564</code><br>
 <a href="index.html">
     <button>
         Return
