--- a/links.html
+++ b/links.html
@@ -13,15 +13,18 @@
 <body>
 <a href="https://bsky.app/profile/allyce1.bsky.social">
     <button>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7a/Bluesky_Logo.svg/640px-Bluesky_Logo.svg.png" alt=""> Bluesky
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7a/Bluesky_Logo.svg/640px-Bluesky_Logo.svg.png"
+             alt=""> Bluesky
     </button>
 </a><a href="https://store.epicgames.com/u/267b6462f9da464491001d1869f56a7d">
     <button>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/31/Epic_Games_logo.svg/200px-Epic_Games_logo.svg.png" alt=""> Epic Games
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/31/Epic_Games_logo.svg/200px-Epic_Games_logo.svg.png"
+             alt=""> Epic Games
     </button>
 </a><a href="https://github.com/AllyToAll">
     <button>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c2/GitHub_Invertocat_Logo.svg/440px-GitHub_Invertocat_Logo.svg.png" alt=""> GitHub
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c2/GitHub_Invertocat_Logo.svg/440px-GitHub_Invertocat_Logo.svg.png"
+             alt=""> GitHub
     </button>
 </a><a href="https://www.guilded.gg/allyce">
     <button>
@@ -29,66 +32,87 @@
     </button>
 </a><a href="https://www.gog.com/u/AllyToAll">
     <button>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/de/GOG.com_Logo.png/640px-GOG.com_Logo.png" alt=""> GoG
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/de/GOG.com_Logo.png/640px-GOG.com_Logo.png"
+             alt=""> GoG
     </button>
 </a><a href="https://instagram.com/ally_to_all">
     <button>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/95/Instagram_logo_2022.svg/1920px-Instagram_logo_2022.svg.png" alt=""> Instagram
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/95/Instagram_logo_2022.svg/1920px-Instagram_logo_2022.svg.png"
+             alt=""> Instagram
     </button>
 </a><a href="https://www.pinterest.it/AllyToAll/">
     <button>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/0/08/Pinterest-logo.png?20160129083321" alt=""> Pinterest
+        <img src="https://upload.wikimedia.org/wikipedia/commons/0/08/Pinterest-logo.png?20160129083321" alt="">
+        Pinterest
     </button>
 </a><a href="https://psnprofiles.com/AllyToAll">
     <button>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/00/PlayStation_logo.svg/640px-PlayStation_logo.svg.png" alt=""> PlayStation
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/00/PlayStation_logo.svg/640px-PlayStation_logo.svg.png"
+             alt=""> PlayStation
     </button>
 </a><a href="https://www.reddit.com/user/Allyce3642/">
     <button>
-        <img src="https://upload.wikimedia.org/wikipedia/en/thumb/b/bd/Reddit_Logo_Icon.svg/1920px-Reddit_Logo_Icon.svg.png" alt=""> Reddit
+        <img src="https://upload.wikimedia.org/wikipedia/en/thumb/b/bd/Reddit_Logo_Icon.svg/1920px-Reddit_Logo_Icon.svg.png"
+             alt=""> Reddit
+    </button>
+</a><a href="https://signal.me/#eu/T56AHc1JKr4oTX8Y66D8ELfZX_SgwNM2aYjM0735WXMVpumgYLpGzZvSO-ru_PqO">
+    <button>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8d/Signal-Logo.svg/640px-Signal-Logo.svg.png"
+             alt=""> Signal
     </button>
 </a><a href="https://steamcommunity.com/id/Allyce3642/">
     <button>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/83/Steam_icon_logo.svg/640px-Steam_icon_logo.svg.png" alt=""> Steam
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/83/Steam_icon_logo.svg/640px-Steam_icon_logo.svg.png"
+             alt=""> Steam
     </button>
 </a><a href="https://www.threads.net/@ally_to_all">
     <button>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9d/Threads_%28app%29_logo.svg/640px-Threads_%28app%29_logo.svg.png" alt=""> Threads
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9d/Threads_%28app%29_logo.svg/640px-Threads_%28app%29_logo.svg.png"
+             alt=""> Threads
     </button>
 </a><a href="https://tiktok.com/@allyce3642">
     <button>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/34/Ionicons_logo-tiktok.svg/640px-Ionicons_logo-tiktok.svg.png" alt=""> TikTok
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/34/Ionicons_logo-tiktok.svg/640px-Ionicons_logo-tiktok.svg.png"
+             alt=""> TikTok
     </button>
 </a><a href="https://allyce3642.tumblr.com/">
     <button>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f6/Font_Awesome_5_brands_tumblr-square.svg/640px-Font_Awesome_5_brands_tumblr-square.svg.png" alt=""> Tumblr
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f6/Font_Awesome_5_brands_tumblr-square.svg/640px-Font_Awesome_5_brands_tumblr-square.svg.png"
+             alt=""> Tumblr
     </button>
 </a><a href="https://twitch.tv/allyce3642/">
     <button>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d3/Twitch_Glitch_Logo_Purple.svg/640px-Twitch_Glitch_Logo_Purple.svg.png" alt=""> Twitch
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d3/Twitch_Glitch_Logo_Purple.svg/640px-Twitch_Glitch_Logo_Purple.svg.png"
+             alt=""> Twitch
     </button>
 </a><a href="https://x.com/allytoall1">
     <button>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6f/Logo_of_Twitter.svg/640px-Logo_of_Twitter.svg.png" alt=""> Twitter
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6f/Logo_of_Twitter.svg/640px-Logo_of_Twitter.svg.png"
+             alt=""> Twitter
     </button>
 </a><a href="https://www.xbox.com/en-GB/play/user/Allyce1017">
     <button>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f9/Xbox_one_logo.svg/640px-Xbox_one_logo.svg.png" alt=""> Xbox
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f9/Xbox_one_logo.svg/640px-Xbox_one_logo.svg.png"
+             alt=""> Xbox
     </button>
 </a><a href="https://www.youtube.com/@allyce7141">
     <button>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fd/YouTube_full-color_icon_%282024%29.svg/640px-YouTube_full-color_icon_%282024%29.svg.png" alt=""> YouTube
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fd/YouTube_full-color_icon_%282024%29.svg/640px-YouTube_full-color_icon_%282024%29.svg.png"
+             alt=""> YouTube
     </button>
 </a><a href="https://ubisoftconnect.com/en-GB/profile/Ally_To_All/">
     <button>
         <img src="https://upload.wikimedia.org/wikipedia/commons/7/78/Ubisoft_logo.svg" alt=""> Ubisoft
     </button>
 </a><br>
-<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fc/Valorant_logo_-_pink_color_version_%28cropped%29.png/640px-Valorant_logo_-_pink_color_version_%28cropped%29.png" alt=""> Riot Games - <code>Allyce#ENBY</code><br>
-<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/01/Activision.svg/640px-Activision.svg.png" alt=""> Activision / Call of Duty - <code>Allyce#1744697</code><br>
-<img src="https://upload.wikimedia.org/wikipedia/en/thumb/d/db/Starbreeze_Studios.svg/220px-Starbreeze_Studios.svg.png" alt=""> Nebula Starbreeze / Payday - <code>Allyce</code><br>
-<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8d/Signal-Logo.svg/640px-Signal-Logo.svg.png" alt=""> Signal - <code>allyce.01</code><br>
-<img src="https://upload.wikimedia.org/wikipedia/en/a/a8/Battlenet-logo.png" alt=""> Battle.net - <code>Ally#22564</code><br>
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fc/Valorant_logo_-_pink_color_version_%28cropped%29.png/640px-Valorant_logo_-_pink_color_version_%28cropped%29.png"
+     alt=""> Riot Games - <code>Allyce#ENBY</code><br>
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/01/Activision.svg/640px-Activision.svg.png" alt="">
+Activision / Call of Duty - <code>Allyce#1744697</code><br>
+<img src="https://upload.wikimedia.org/wikipedia/en/thumb/d/db/Starbreeze_Studios.svg/220px-Starbreeze_Studios.svg.png"
+     alt=""> Nebula Starbreeze / Payday - <code>Allyce</code><br>
+<img src="https://upload.wikimedia.org/wikipedia/en/a/a8/Battlenet-logo.png" alt=""> Battle.net -
+<code>Ally#22564</code><br>
 <a href="index.html">
     <button>
         Return
