resize index svg

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
             height: 1em;
             width: 1em;
         }
+        svg {
+            height: 1em;
+            width: 1em;
+        }
     </style>
 </head>
 <body>
