--- a/games.html
+++ b/games.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 <h1>My Games</h1>
-Minecraft Bedrock + Java<br>
+<b>Minecraft Bedrock + Java</b><br>
 The rest can be found on one of the following<br>
 <a href="https://steamcommunity.com/id/Allyce3642/games">
     <button>
