Pronoun page first leads to an image such that if pronounpage is down you dont need to rely on the external website, but can still be accessed

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <p>
     Welcome to Allyce's website :)
 </p>
-<a href="https://en.pronouns.page/@Allyce">
+<a href="pronouns.html">
     <button>
         <img src="https://en.pronouns.page/logo/logo-primary.svg" alt=""> Pronouns
     </button>
