--- a/links.html
+++ b/links.html
@@ -13,6 +13,15 @@
             height: 1em;
             width: 1em;
         }
+
+        body {
+            height: 100%;
+            margin: 0;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
     </style>
 </head>
 <body>
