Got to put my mailing address somewhere, it is somewhere now

--- a/pgp.html
+++ b/pgp.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>My PGP Public Key</title>
+    <title>allytoall@protonmail.com</title>
 </head>
 <body><pre>
 -----BEGIN PGP PUBLIC KEY BLOCK-----
