looks way better using tailwind css

--- a/index.html
+++ b/index.html
@@ -3,58 +3,79 @@
 <head>
     <meta charset="UTF-8">
     <title>Allyce</title>
-    <style>
-        img {
-            height: 1em;
-            width: 1em;
-        }
+    <style type="text/tailwindcss">
+        @layer components {
+            .btn-gray {
+                @apply bg-gray-500 hover:bg-gray-700 text-white font-bold py-2 px-4 rounded;
+            }
 
-        svg {
-            height: 1em;
-            width: 1em;
-        }
-        body {
-            height: 100%;
-            margin: 0;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
+            .btn-red {
+                @apply bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded;
+            }
+
+            .btn-green {
+                @apply bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded;
+            }
+
+            .btn-white {
+                @apply bg-neutral-50 hover:bg-neutral-100 text-black font-bold py-2 px-4 rounded;
+            }
+
+            .input {
+                @apply appearance-none border rounded max-w-md mx-auto py-2 px-3 text-gray-700 leading-tight focus:outline-none text-center;
+            }
+
+            .title {
+                @apply block text-gray-700 font-bold mb-2 text-xl text-center;
+            }
+
+            .background {
+                @apply w-full max-w-xs flex items-center justify-center min-h-screen min-w-full;
+            }
+
+            img, svg {
+                @apply h-4 w-4;
+            }
         }
     </style>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-<p>
-    Welcome to Allyce's website :)
-</p>
-<a href="pronouns.html">
-    <button>
-        <img src="https://en.pronouns.page/logo/logo-primary.svg" alt=""> Pronouns
-    </button>
-</a><br><a href="links.html">
-    <button>
+<body class="background">
+<div class="input">
+    <h1 class="title">
+        Welcome to Allyce's website :)
+    </h1>
+    <a href="pronouns.html">
+        <button class="btn-white">
+            <img alt="" src="https://en.pronouns.page/logo/logo-primary.svg"> Pronouns
+        </button>
+    </a><br><a href="links.html">
+    <button class="btn-white">
         Links
     </button>
 </a><br><a href="games.html">
-    <button>
+    <button class="btn-white">
         Games
     </button>
 </a><br><a href="https://myhajs.haiko-the-haj.com/plushie/406481120641810433/byte">
-    <button>
-        <img src="https://haiko-the-haj.com/haiko.png" alt=""> Blåhaj
+    <button class="btn-white">
+        <img alt="" src="https://haiko-the-haj.com/haiko.png"> Blåhaj
     </button>
 </a><br><a href="discord.html">
-    <button>
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-discord"
-             viewBox="0 0 16 16">
+    <button class="btn-white">
+        <svg class="bi bi-discord" fill="currentColor" height="16" viewBox="0 0 16 16" width="16"
+             xmlns="http://www.w3.org/2000/svg">
             <path d="M13.545 2.907a13.2 13.2 0 0 0-3.257-1.011.05.05 0 0 0-.052.025c-.141.25-.297.577-.406.833a12.2 12.2 0 0 0-3.658 0 8 8 0 0 0-.412-.833.05.05 0 0 0-.052-.025c-1.125.194-2.22.534-3.257 1.011a.04.04 0 0 0-.021.018C.356 6.024-.213 9.047.066 12.032q.003.022.021.037a13.3 13.3 0 0 0 3.995 2.02.05.05 0 0 0 .056-.019q.463-.63.818-1.329a.05.05 0 0 0-.01-.059l-.018-.011a9 9 0 0 1-1.248-.595.05.05 0 0 1-.02-.066l.015-.019q.127-.095.248-.195a.05.05 0 0 1 .051-.007c2.619 1.196 5.454 1.196 8.041 0a.05.05 0 0 1 .053.007q.121.1.248.195a.05.05 0 0 1-.004.085 8 8 0 0 1-1.249.594.05.05 0 0 0-.03.03.05.05 0 0 0 .003.041c.24.465.515.909.817 1.329a.05.05 0 0 0 .056.019 13.2 13.2 0 0 0 4.001-2.02.05.05 0 0 0 .021-.037c.334-3.451-.559-6.449-2.366-9.106a.03.03 0 0 0-.02-.019m-8.198 7.307c-.789 0-1.438-.724-1.438-1.612s.637-1.613 1.438-1.613c.807 0 1.45.73 1.438 1.613 0 .888-.637 1.612-1.438 1.612m5.316 0c-.788 0-1.438-.724-1.438-1.612s.637-1.613 1.438-1.613c.807 0 1.451.73 1.438 1.613 0 .888-.631 1.612-1.438 1.612"/>
         </svg>
         Discord
     </button>
 </a><br><a href="pgp.html">
-    <button>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a3/GnuPG-Logo.svg/1920px-GnuPG-Logo.svg.png" alt=""> GnuPG OpenPGP Key
+    <button class="btn-white">
+        <img alt=""
+             src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a3/GnuPG-Logo.svg/1920px-GnuPG-Logo.svg.png">
+        GnuPG OpenPGP Key
     </button>
 </a>
+</div>
 </body>
 </html>
