--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             }
 
             .input {
-                @apply appearance-none border rounded max-w-md mx-auto py-2 px-3 text-gray-700 leading-tight focus:outline-none text-center;
+                @apply bg-neutral-200 appearance-none border rounded max-w-md mx-auto py-2 px-3 text-gray-700 leading-tight focus:outline-none text-center;
             }
 
             .title {
@@ -47,7 +47,7 @@
     </h1>
     <a href="pronouns.html">
         <button class="btn-white">
-            <img alt="" src="https://en.pronouns.page/logo/logo-primary.svg"> Pronouns
+            <img alt="" src="https://en.pronouns.page/@Allyce"> Pronouns
         </button>
     </a><br><a href="links.html">
     <button class="btn-white">
@@ -73,7 +73,7 @@
     <button class="btn-white">
         <img alt=""
              src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a3/GnuPG-Logo.svg/1920px-GnuPG-Logo.svg.png">
-        GnuPG OpenPGP Key
+        GnuPG Public Key
     </button>
 </a>
 </div>
