Quick Fix, urls messed

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
     <h1 class="title">
         Welcome to Allyce's website :)
     </h1>
-    <a href="pronouns.html">
+    <a href="https://en.pronouns.page/@Allyce">
         <button class="btn-white">
-            <img alt="" src="https://en.pronouns.page/@Allyce"> Pronouns
+            <img alt="" src="https://en.pronouns.page/logo/logo-primary.svg"> Pronouns
         </button>
     </a><br><a href="links.html">
     <button class="btn-white">
