--- a/links.html
+++ b/links.html
@@ -26,7 +26,7 @@
             }
 
             .input {
-                @apply  bg-neutral-200 appearance-none border rounded max-w-md mx-auto py-2 px-3 text-gray-700 leading-tight focus:outline-none text-center;
+                @apply bg-neutral-200 appearance-none border rounded max-w-md mx-auto py-2 px-3 text-gray-700 leading-tight focus:outline-none text-center;
             }
 
             .title {
@@ -104,6 +104,8 @@
     </button>
 </a><a href="https://www.xiaohongshu.com/user/profile/678846fd0000000008019588">
     <button class="btn-white">
+        <img alt=""
+             src="https://upload.wikimedia.org/wikipedia/commons/c/c1/XiaohongshuLOGO.svg">
         Xiaohongshu
     </button>
 </a><br>
