--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
         <button class="btn-white">
             <img alt="" src="https://en.pronouns.page/logo/logo-primary.svg"> Pronouns
         </button>
-    </a><br><a href="links.html">
+    </a><br><a href="links/index.html">
     <button class="btn-white">
         Links
     </button>
-</a><br><a href="games.html">
+</a><br><a href="games/index.html">
     <button class="btn-white">
         Games
     </button>
@@ -61,7 +61,7 @@
     <button class="btn-white">
         <img alt="" src="https://haiko-the-haj.com/haiko.png"> Blåhaj
     </button>
-</a><br><a href="discord.html">
+</a><br><a href="discord/index.html">
     <button class="btn-white">
         <svg class="bi bi-discord" fill="currentColor" height="16" viewBox="0 0 16 16" width="16"
              xmlns="http://www.w3.org/2000/svg">
@@ -69,7 +69,7 @@
         </svg>
         Discord
     </button>
-</a><br><a href="pgp.html">
+</a><br><a href="pgp/index.html">
     <button class="btn-white">
         <img alt=""
              src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a3/GnuPG-Logo.svg/1920px-GnuPG-Logo.svg.png">
