--- a/pgp/index.html
+++ b/pgp/index.html
@@ -61,7 +61,7 @@
             Download
         </button>
     </a>
-    <a href="..">
+    <a href="/">
         <button class="btn-gray">
             Return
         </button>
