--- a/discord/index.html
+++ b/discord/index.html
@@ -39,6 +39,11 @@
         }
     </style>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+        if (window.location.pathname.endsWith('/') && window.location.pathname !== '/') {
+            window.history.replaceState({}, '', window.location.pathname.slice(0, -1));
+        }
+    </script>
 </head>
 <body class="background">
 <div class="input">
