Change pgp to gpg, it just makes more sense

--- a/gpg/index.html
+++ b/gpg/index.html
@@ -47,7 +47,7 @@
         if (window.location.pathname.endsWith('/') && window.location.pathname !== '/') {
             window.history.replaceState({}, '', window.location.pathname.slice(0, -1));
         }
-        const x = "pgp";
+        const x = "gpg";
         if (window.location.pathname.endsWith('/'+x+'/index.html')) {
             window.location.href = '/' + x;
         }
