--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </svg>
         Discord
     </button>
-</a><br><a href="/pgp">
+</a><br><a href="/gpg">
     <button class="btn-white">
         <img alt=""
              src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a3/GnuPG-Logo.svg/1920px-GnuPG-Logo.svg.png">
