--- a/discord/index.html
+++ b/discord/index.html
@@ -22,7 +22,7 @@
             }
 
             .input {
-                @apply appearance-none border rounded max-w-md mx-auto py-2 px-3 text-gray-700 leading-tight focus:outline-none text-center;
+                @apply bg-neutral-200 appearance-none border rounded max-w-md mx-auto py-2 px-3 text-gray-700 leading-tight focus:outline-none text-center;
             }
 
             .title {
