--- a/discord/index.html
+++ b/discord/index.html
@@ -3,16 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Discord</title>
-    <script>
-        if (window.location.pathname.endsWith('/') && window.location.pathname !== '/') {
-            window.history.replaceState({}, '', window.location.pathname.slice(0, -1));
-        }
-        const x = "discord";
-        if (window.location.pathname.endsWith('/' + x + '/index.html')) {
-            window.location.href = '/' + x;
-        }
-    </script>
     <link rel="stylesheet" href="../output.css">
+    <script src="../urlHandling.js"></script>
 </head>
 <body class="background">
 <div class="input">
