--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Allyce</title>
     <link rel="stylesheet" href="output.css">
+    <script src="urlHandling.js"></script>
 </head>
 <body class="background">
 <div class="input">
