OpenGraph implementation test

--- a/studies/index.html
+++ b/studies/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta property="og:title" content="Studies" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://allytoall.github.io/studies" />
+    <meta property="og:description" content="Enter description" />
     <title>Studies</title>
     <link rel="stylesheet" href="../output.css">
     <script src="../urlHandling.js"></script>
