OpenGraph implementation test

--- a/studies/index.html
+++ b/studies/index.html
@@ -5,7 +5,7 @@
     <meta property="og:title" content="Studies" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://allytoall.github.io/studies" />
-    <meta property="og:description" content="Enter description" />
+    <meta property="og:description" content="Studies" />
     <title>Studies</title>
     <link rel="stylesheet" href="../output.css">
     <script src="../urlHandling.js"></script>
