OpenGraph implementation test - images

--- a/discord/index.html
+++ b/discord/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta property="og:title" content="Allyce's Discord" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://allytoall.github.io/discord" />
+    <meta property="og:description" content="Allyce's Silly Little Website :3" />
     <title>Discord</title>
     <link rel="stylesheet" href="../output.css">
     <script src="../urlHandling.js"></script>
