--- a/gpg/index.html
+++ b/gpg/index.html
@@ -2,6 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta property="og:title" content="Allyce's GPG Key" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="thumbnails/gpg.png" />
+    <meta property="og:url" content="https://allytoall.github.io/" />
+    <meta property="og:description" content="Allyce's GPG Key" />
     <title>allytoall@protonmail.com</title>
     <link rel="stylesheet" href="../output.css">
     <script src="../urlHandling.js"></script>
