--- a/quotes/index.html
+++ b/quotes/index.html
@@ -2,6 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta property="og:title" content="Allyce's Quoes" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="thumbnails/index.png" />
+    <meta property="og:url" content="https://allytoall.github.io/" />
+    <meta property="og:description" content="Quotes I like :3" />
     <title>ideas</title>
     <link rel="stylesheet" href="../output.css">
     <script src="../urlHandling.js"></script>
