--- a/code/index.html
+++ b/code/index.html
@@ -2,6 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta property="og:title" content="Website's Source Code" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="thumbnails/source.png" />
+    <meta property="og:url" content="https://github.com/AllyToAll/AllyToAll.github.io" />
+    <meta property="og:description" content="Website's source code" />
     <meta http-equiv="refresh" content="0; url=https://github.com/AllyToAll/AllyToAll.github.io">
     <title>Redirecting...</title>
 </head>
