--- a/links/index.html
+++ b/links/index.html
@@ -2,6 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta property="og:title" content="Allyce's Links" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="thumbnails/links.png" />
+    <meta property="og:url" content="https://allytoall.github.io/" />
+    <meta property="og:description" content="Allyce's Links" />
     <title>Links</title>
     <link rel="stylesheet" href="../output.css">
     <script src="../urlHandling.js"></script>
