--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta property="og:title" content="Allyce's Website" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="thumbnails/index.png" />
+    <meta property="og:image" content="https://allytoall.github.io/thumbnails/index.png" />
     <meta property="og:url" content="https://allytoall.github.io/" />
     <meta property="og:description" content="Allyce's Silly Little Website :3" />
     <title>Allyce</title>
