--- a/studies/index.html
+++ b/studies/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta property="og:title" content="Studies" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="studies" />
+    <meta property="og:image" content="thumbnails/studies.png" />
     <meta property="og:url" content="https://allytoall.github.io/studies" />
     <meta property="og:description" content="Studies" />
     <title>Studies</title>
