--- a/studies/index.html
+++ b/studies/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta property="og:title" content="Studies" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="thumbnails/studies.png" />
+    <meta property="og:image" content="https://allytoall.github.io/thumbnails/studies.png" />
     <meta property="og:url" content="https://allytoall.github.io/studies" />
     <meta property="og:description" content="Studies" />
     <title>Studies</title>
-    <link rel="stylesheet" href="../output.css">
-    <script src="../urlHandling.js"></script>
+    <link rel="stylesheet" href="https://allytoall.github.io/output.css">
+    <script src="https://allytoall.github.io/urlHandling.js"></script>
     <style>
         a {
             color: #1155cc;
