--- a/discord/index.html
+++ b/discord/index.html
@@ -7,8 +7,8 @@
     <meta property="og:url" content="https://allytoall.github.io/discord" />
     <meta property="og:description" content="Allyce's Silly Little Website :3" />
     <title>Discord</title>
-    <link rel="stylesheet" href="../output.css">
-    <script src="../urlHandling.js"></script>
+    <link rel="stylesheet" href="https://allytoall.github.io/output.css">
+    <script src="https://allytoall.github.io/urlHandling.js"></script>
 </head>
 <body class="background">
 <div class="input">
