--- a/games/index.html
+++ b/games/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta property="og:title" content="Allyce's Games" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="thumbnails/games.png" />
+    <meta property="og:image" content="https://allytoall.github.io/thumbnails/games.png" />
     <meta property="og:url" content="https://allytoall.github.io/" />
     <meta property="og:description" content="Allyce's Games" />
     <title>Games</title>
-    <link rel="stylesheet" href="../output.css">
-    <script src="../urlHandling.js"></script>
+    <link rel="stylesheet" href="https://allytoall.github.io/output.css">
+    <script src="https://allytoall.github.io/urlHandling.js"></script>
 </head>
 <body class="background">
 <div class="input">
