--- a/blahaj/index.html
+++ b/blahaj/index.html
@@ -6,7 +6,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://allytoall.github.io/thumbnails/blahaj.png" />
     <meta property="og:url" content="https://myhajs.haiko-the-haj.com/plushie/406481120641810433/byte" />
-    <meta property="og:description" content="Allyce's Silly Little Website :3" />
+    <meta property="og:description" content="Allyce's Blahaj :3" />
     <meta http-equiv="refresh" content="0; url=https://myhajs.haiko-the-haj.com/plushie/406481120641810433/byte">
     <title>Redirecting...</title>
 </head>
