--- a/discord/index.html
+++ b/discord/index.html
@@ -5,6 +5,7 @@
     <meta property="og:title" content="Allyce's Discord" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://allytoall.github.io/discord" />
+    <meta property="og:image" content="https://allytoall.github.io/thumbnails/Discord-Symbol-Black.png" />
     <meta property="og:description" content="Allyce's Silly Little Website :3" />
     <title>Discord</title>
     <link rel="stylesheet" href="https://allytoall.github.io/output.css">
