--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </button>
 </a><br><a href="/games">
     <button class="btn white">
-        <img src="controller.png" alt=""> Games
+        <img src="/thumbnails/controller.png" alt=""> Games
     </button>
 </a><br><a href="https://myhajs.haiko-the-haj.com/plushie/406481120641810433/byte">
     <button class="btn blahaj">
