--- a/games/index.html
+++ b/games/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta property="og:title" content="Allyce's Games" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://allytoall.github.io/thumbnails/games.png" />
+    <meta property="og:image" content="https://allytoall.github.io/thumbnails/controller.png" />
     <meta property="og:url" content="https://allytoall.github.io/" />
     <meta property="og:description" content="Allyce's Games" />
     <title>Games</title>
