--- a/links/index.html
+++ b/links/index.html
@@ -5,7 +5,7 @@
     <meta property="og:title" content="Allyce's Links" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://allytoall.github.io/thumbnails/links.png" />
-    <meta property="og:url" content="https://allytoall.github.io/" />
+    <meta property="og:url" content="https://allytoall.github.io/links" />
     <meta property="og:description" content="Allyce's Links" />
     <title>Links</title>
     <link rel="stylesheet" href="https://allytoall.github.io/output.css">
