--- a/games/index.html
+++ b/games/index.html
@@ -5,7 +5,7 @@
     <meta property="og:title" content="Allyce's Games" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://allytoall.github.io/thumbnails/controller.png" />
-    <meta property="og:url" content="https://allytoall.github.io/" />
+    <meta property="og:url" content="https://allytoall.github.io/games" />
     <meta property="og:description" content="Allyce's Games" />
     <title>Games</title>
     <link rel="stylesheet" href="https://allytoall.github.io/output.css">
